--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,11 +33,11 @@ jobs:
       - name: Install ESLint
         run: |
           npm install eslint@^9.34.0 @typescript-eslint/eslint-plugin@^8.40.0 @typescript-eslint/parser@^8.40.0 @microsoft/eslint-formatter-sarif@3.1.0 --legacy-peer-deps
-
+# "GPT-5/task1/src"
       - name: Run ESLint
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
-        run: npx eslint "GPT-5/**/src" "Claude4/**/src" \
+        run: npx eslint "Claude4/task1/src" \
           --config .eslintrc.js \
           --ext .js,.jsx,.ts,.tsx \
           --format @microsoft/eslint-formatter-sarif \
