--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -36,14 +36,12 @@ jobs:
           npm install @microsoft/eslint-formatter-sarif@3.1.0
 
       - name: Run ESLint
-        env:
-          SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
-        run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
-          --output-file eslint-results.sarif
-        continue-on-error: true
+        run: |
+          npx eslint "GPT-5/**/src" "Claude4/**/src" \
+            --config .eslintrc.js \
+            --ext .js,.jsx,.ts,.tsx \
+            --format @microsoft/eslint-formatter-sarif \
+            -o eslint-results.sarif || true
 
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
