--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -35,7 +35,7 @@ jobs:
           npm install eslint@9.34.0
 
       - name: Run ESLint
-        run: npx eslint "GPT-5/task1/src" "Claude4/task1/src" --ext .ts
+        run: npx eslint "Claude4/task1/src" --ext .ts
 
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
