--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.34.0",
+    "eslint-plugin-unicorn": "^60.0.0",
     "typescript": "^5.9.2"
   }
 }
