--- a/GPT-5/task1/package.json
+++ b/GPT-5/task1/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+  "build": "tsc",
+  "start": "npm run build && node dist/server.js",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage"
@@ -12,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+  "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
+  "typescript": "^5.9.2",
     "supertest": "^7.1.4",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
