--- a/GPT-5/task3/sonar-project.properties
+++ b/GPT-5/task3/sonar-project.properties
@@ -8,14 +8,14 @@ sonar.projectName=GPT-5 - Task 3
 sonar.projectVersion=1.0
 
 # Caminho para os arquivos de código fonte (o ponto . significa a pasta atual)
-sonar.sources=.
+sonar.sources=src
+sonar.tests=.
+sonar.test.inclusions=**/*.test.ts
 
 # Codificação dos arquivos
 sonar.sourceEncoding=UTF-8
-
+sonar.host.url=http://localhost:9000
 # (MUITO IMPORTANTE PARA VOCÊ) Caminho para o relatório de cobertura do Jest
 # O Jest precisa ser configurado para gerar um relatório no formato 'lcov'.
 # Geralmente, ele é gerado em uma pasta 'coverage'.
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-sonar.login=sqa_eeec9d466a5019b700c593eebecd39a45e6b29e6
