--- a/GPT-5/task3/package.json
+++ b/GPT-5/task3/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.2",
     "supertest": "^7.1.4",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@types/node": "^24.9.1",
+    "express": "^5.1.0",
     "typescript": "^5.9.3"
   }
 }
