--- a/GPT-5/task3/package.json
+++ b/GPT-5/task3/package.json
@@ -18,10 +18,12 @@
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.2",
     "supertest": "^7.1.4",
-    "vitest": "^4.0.2"
+    "vitest": "^4.0.2",
+    "@types/express": "^4.17.21"
   },
   "dependencies": {
     "@types/node": "^24.9.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "express": "^5.1.0"
   }
 }
