--- a/GPT-5/task3/package.json
+++ b/GPT-5/task3/package.json
@@ -9,7 +9,8 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "dev": "set RUN_SERVER=true&& tsc && node dist/server.js"
   },
   "keywords": [],
   "author": "",
